@@ -10,6 +10,7 @@ CLEANFILES = $(gnomemime_DATA)
 
 MAINTAINERCLEANFILES = Makefile.in
 
+
 vpath cmd_%.xsl $(top_srcdir)/xsl
 vpath chemical-mime-database.xml $(top_builddir)/src
 
@@ -20,8 +21,9 @@ gnomemime_DATA = chemical-mime-data.keys chemical-mime-data.mime
 endif #BOOL_GNOME_MIME
 
 
-chemical-mime-data.keys : cmd_gnome-keys.xsl chemical-mime-database.xml
-	$(XSLTPROC)  $^
+chemical-mime-data.keys : cmd_gnome-keys.xsl chemical-mime-database.xml cmd_common.xsl
+	$(XSLTPROC) $(XSLTPROC_FLAGS) $(filter-out $(top_srcdir)/xsl/cmd_common.xsl,$^)
 
-chemical-mime-data.mime : cmd_gnome-mime.xsl chemical-mime-database.xml
-	$(XSLTPROC)  $^
+chemical-mime-data.mime : cmd_gnome-mime.xsl chemical-mime-database.xml cmd_common.xsl
+	$(XSLTPROC) $(XSLTPROC_FLAGS) $(filter-out $(top_srcdir)/xsl/cmd_common.xsl,$^)
+
